Bump down composer toolbar item padding slightly to avoid wrapping

--- a/app/internal_packages/composer/styles/composer.less
+++ b/app/internal_packages/composer/styles/composer.less
@@ -106,7 +106,7 @@
   button {
     cursor: pointer;
     color: fadeout(mix(@btn-default-text-color, @component-active-color, 88%), 30%);
-    padding: 4px 5px;
+    padding: 4px 4.7px;
     border: none;
     background: none;
     width: initial;
